another overflow fix

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,8 +1,8 @@
 @import "/src/App.scss";
 
 .everything {
-    left: 4.5%;
-    max-width: 1800px;
+    left: 15.5%;
+    width: 1300px;
     height: 900px;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -15,7 +15,7 @@
     max-width: 900px;
     font-size: 25px;
     top: 70px;
-    left: 41.5%;
+    left: 43%;
     position: absolute;
     color: rgb(255, 255, 255);
  
@@ -58,12 +58,12 @@
 }
 .createaccounttext{
     top: 550px;
-    left: 42.7%;
+    left: 44.5%;
     position: absolute;
 }
 .createaccount{
     top: 600px;
-    left: 41.7%;
+    left: 43%;
     position: absolute;
 }
 
